@@ -17,7 +17,7 @@
 ## **Updates in 1.3**
 
 ### Greetings all! It's been a while since the last -major- update, so do we have some changes in store!
-### We have changed how the Bygone generates as whole entirely, reworked the Amber Desert biome, and so much more!
+### We have changed how the Bygone generates as whole entirely, reworked the Amber Desert biome, revamped the Ancient Hook, added a new mob and so much more!
 ### PLEASE keep in mind you WILL have to delete your /bygone/ dimension folder before updating! Some of the changes will have made things unstable in older worlds!
 
 
@@ -45,6 +45,12 @@
 * Patches of Amber Clumps generate on walls and ceilings.
 * Pointed Amber now generates only on ceilings.
 * Tweaked the fog and sky colors to fit the dimension better!
+
+# Ancient Hook changes:
+* Ancient Hook now discards when in liquids. (this is to fix strange behaviour with water),
+* Ancient Hook now discards when the player is further than 64 blocks away.,
+* Ancient Hook now discards when the shift key is pressed.
+* Ancient Hook now attaches to blocks way faster as its shoot speed has been increased a lot.
 
 # The Whiskbill
 * A new passive mob found only in the Underhang.
@@ -81,6 +87,7 @@
 * Fixed Whirliweeds not being "replaceable".
 * Fixed numerous tags from being broken.
 * Fixed numerous broken stonecutter recipes for Byslate and Bystone (All types).
+* Fixed multiple Bygone mobs having "lag" between movements.
 
 
 
